# ipc-toolkit

./: .buildinfo  .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CNAME  Doxyfile  IPCToolkitOptions.cmake.sample  LICENSE  MANIFEST.in  README.md  api.html  building.html  c++.html  changelog.html  code_of_conduct.html  codecov.yml  concepts.html  contributing.html  cpp-api.html  cpp.html  dependencies.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  pre-commit-config.yaml  py-modindex.html  pyproject.toml  python-api.html  python.html  release_notes.html  (+5 more)
python/: .clang-format  CMakeLists.txt  README.md  _find_ipctk.py  convergent-ipc-demo.ipynb  discrete-new-formulation.ipynb  example.ipynb  mymath.py  new-formulation.ipynb  potentials.py  pure-python-smooth-contact.ipynb
python/examples/: anisotropic_friction.py  example.ipynb  find_ipctk.py  lbvh.py  lbvh_profile.csv  ogc.py  profiler.py  rigid.py  solver.py
python/src/: CMakeLists.txt  bindings.cpp  bindings.hpp  collision_constraint.cpp  collision_mesh.cpp  common.hpp  ipc.cpp  utils.hpp
python/src/adhesion/: CMakeLists.txt  adhesion.cpp  bindings.hpp
python/tests/: find_ipctk.py  requirements.txt  rigid_example.py  test_candidates.py  test_ccd.py  test_collision_filter.py  test_collision_mesh.py  test_constraints.py  test_intersections.py  test_interval.py  test_ipc.py  test_material_friction.py  utils.py
src/: CMakeLists.txt  collision_constraint.cpp  collision_constraint.hpp  collision_mesh.cpp  collision_mesh.hpp  config.hpp.in  ipc.cpp  ipc.hpp  surface_mesh.cpp  surface_mesh.hpp
src/barrier/: CMakeLists.txt  adaptive_stiffness.cpp  adaptive_stiffness.hpp  barrier.cpp  barrier.hpp  barrier.tpp
src/broad_phase/: CMakeLists.txt  aabb.cpp  aabb.hpp  broad_phase.cpp  broad_phase.hpp  brute_force.cpp  brute_force.hpp  collision_candidate.cpp  collision_candidate.hpp  hash_grid.cpp  hash_grid.hpp  spatial_hash.cpp  spatial_hash.hpp  sweep.cpp  sweep.hpp  sweep_and_tiniest_queue.cpp  voxel_size_heuristic.cpp
src/ccd/: CMakeLists.txt  aabb.cpp  aabb.hpp  broadphase.cpp  broadphase.hpp  ccd.cpp  ccd.hpp  edge_vertex_ccd_2D.cpp  edge_vertex_ccd_2D.hpp  inexact_point_edge.cpp  nonlinear_ccd.hpp  point_static_plane.cpp  point_static_plane.hpp
src/collisions/: CMakeLists.txt  collision_constraint.cpp  collision_constraint.hpp  constraints.cpp  constraints.hpp  construct_constraint_set.cpp  construct_constraint_set.hpp  edge_edge.cpp  edge_edge.hpp  edge_vertex.cpp  edge_vertex.hpp  face_vertex.cpp  face_vertex.hpp  plane_vertex.cpp  plane_vertex.hpp  vertex_vertex.cpp  vertex_vertex.hpp
src/distance/: CMakeLists.txt  distance_type.hpp  distance_type.tpp  edge_edge.hpp  edge_edge_mollifier.cpp  edge_edge_mollifier.hpp  line_line.cpp  line_line.hpp  point_edge.hpp  point_line.cpp  point_line.hpp  point_plane.cpp  point_plane.hpp  point_point.hpp  point_triangle.hpp
src/friction/: CMakeLists.txt  closest_point.cpp  closest_point.hpp  friction.cpp  friction.hpp  friction.tpp  friction_constraint.cpp  friction_constraint.hpp  normal_force_magnitude.cpp  normal_force_magnitude.hpp  relative_displacement.hpp  smooth_friction_mollifier.hpp  smooth_friction_mollifier.tpp  tangent_basis.cpp  tangent_basis.hpp
src/implicits/: CMakeLists.txt  plane.cpp  plane.hpp
src/ipc/: CMakeLists.txt  collision_filter.cpp  collision_filter.hpp  collision_mesh.cpp  collision_mesh.hpp  config.hpp  config.hpp.in  ipc.cpp  ipc.hpp
src/spatial_hash/: CMakeLists.txt  broad_phase.cpp  broad_phase.hpp  brute_force.cpp  brute_force.hpp  collision_candidate.cpp  collision_candidate.hpp  hash_grid.cpp  hash_grid.hpp  spatial_hash.cpp  spatial_hash.hpp  voxel_size_heuristic.cpp  voxel_size_heuristic.hpp
src/utils/: CMakeLists.txt  area_gradient.cpp  area_gradient.hpp  eigen_ext.cpp  eigen_ext.hpp  eigen_ext.tpp  faces_to_edges.cpp  faces_to_edges.hpp  intersection.cpp  intersection.hpp  intervals.hpp  local_hessian_to_global_triplets.cpp  local_hessian_to_global_triplets.hpp  local_to_global.hpp  logger.cpp  logger.hpp  merge_thread_local_vectors.hpp  rational.hpp  save_obj.cpp  save_obj.hpp  unordered_map_and_set.hpp  vertex_to_min_edge.cpp  vertex_to_min_edge.hpp
tests/: CMakeLists.txt  benchmark_eigen.cpp  main.cpp  static_vs_dynamic.cpp  test_cfl.cpp  test_collision_mesh.cpp  test_has_intersections.cpp  test_ipc.cpp  test_utils.cpp  test_utils.hpp  utils.cpp  utils.hpp
tests/barrier/: test_barrier.cpp
tests/broad_phase/: benchmark_broad_phase.cpp  benchmark_spatial_hash.cpp  brute_force_comparison.cpp  brute_force_comparison.hpp  test_aabb.cpp  test_broad_phase.cpp  test_hash_grid.cpp  test_spatial_hash.cpp  test_voxel_size_heuristic.cpp
tests/candidates/: test_candidates.cpp
tests/ccd/: benchmark_ccd.cpp  collision_generator.cpp  collision_generator.hpp  test_ccd.cpp  test_ccd_benchmark.cpp  test_edge_edge_ccd.cpp  test_edge_vertex_ccd_2D.cpp  test_point_edge_ccd.cpp  test_point_point_ccd.cpp  test_point_triangle_ccd.cpp
tests/collisions/: test_constraints.cpp
tests/constraints/: test_constraints.cpp
tests/data/: E.csv  E.txt  V_t0.txt  V_t1.csv  V_t1.txt  cloth_ball92.ply  cloth_ball93.ply  csv_to_obj.py  height-field.ply  shape_derivative_data.json
tests/distance/: test_distance_type.cpp  test_edge_edge.cpp  test_line_line.cpp  test_point_edge.cpp  test_point_line.cpp  test_point_plane.cpp  test_point_point.cpp  test_point_triangle.cpp
tests/friction/: friction_data_generator.cpp  friction_data_generator.hpp  test_closest_point.cpp  test_force_jacobian.cpp  test_friction.cpp  test_normal_force_magnitude.cpp  test_relative_displacement.cpp  test_relative_velocity.cpp  test_smooth_friction_mollifier.cpp  test_tangent_basis.cpp
tests/gcp-data/: nonlinear_solve_iter020.obj-e.csv  nonlinear_solve_iter020.obj-v.csv  simple_2d.obj-e.csv  simple_2d.obj-v.csv
tests/spatial_hash/: benchmark_spatial_hash.cpp  test_hash_grid.cpp  test_spatial_hash.cpp
(+4334 files in other folders)
